[package]
name = "c4w"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
ordered-float = "1.0"
itertools = "0.8.0"
average = "0.13"
rayon = "1.5.1"
num-integer = "0.1.44"
arrayvec = "0.7.2"
dashmap = { version = "5.2.0", features = ["rayon"] }
hopcroft-karp = "0.2.1"
rs-graph = "0.20.1"
sucds = "0.8.1"
clap = { version = "4.4.18", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
