[package]
name = "c4w"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
ordered-float = "5.1"
itertools = "0.14.0"
average = "0.16"
rayon = "1.10.0"
num-integer = "0.1.46"
arrayvec = { version = "0.7.6", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
hopcroft-karp = "0.2.1"
rs-graph = "0.21.0"
bit-vec = "0.8.0"
clap = { version = "4.5.48", features = ["derive"] }
indicatif = { version = "0.18.0", features = ["rayon"] }
crossterm = "0.29.0"

[profile.release]
lto = true
opt-level = 3
